<resources>
    <string name="app_name">Challenge Tracker</string>
    <string name="time">Elapsed time:</string>
    <string name="distance">Distance:</string>
    <string name="start"><b>start</b></string>
    <string name="stop"><b>stop</b></string>
    <string name="start_new_activity">Start New Activity</string>
    <string name="back_to_activity">Back To Activity</string>
    <string name="settings">Settings</string>
    <string name="create_new_challenge">Create New Challenge</string>
    <string name="select_challenge">Select</string>
    <string name="main_activity_topic">Challenge Status</string>
    <string name="choose_challenge_first">Please choose a challenge first</string>
    <string name="challenge">Challenge</string>
    <string name="your_points">Your points</string>
    <string name="goal_points">Goal points</string>
    <string name="total_points">Total points</string>
    <string name="deadline">Deadline</string>
    <string name="leading_points">Leading points</string>
    <string name="dark_mode_title">Dark Mode</string>
    <string name="dark_mode_summary">Enable or disable dark mode</string>
    <string name="nickname_title">Nickname</string>
    <string name="create_new_challenge_title">Challenge Creation</string>
    <string name="create_new_challenge_name">Challenge Name: </string>
    <string name="default_new_challenge_name">New Challenge</string>
    <string name="default_new_challenge_points">10</string>
    <string name="default_new_challenge_date">YYYY-MM-DD</string>
    <string name="new_activity_button">Add Activity</string>
    <string name="new_activity_name">Name:</string>
    <string name="new_activity_name_content">Activity Name</string>
    <string name="new_activity_points">Points per km:</string>
    <string name="new_activity_points_content">1</string>
    <string name="trash">Delete this activity</string>
    <string name="toast_no_activity">Please add at least one activity for the challenge.</string>
    <string name="kilometers" >%1$.2f km</string>
    <string name="activateGPS">Please activate GPS</string>
    <string name="selectActivity">Please select an activity</string>
    <string name="activitySubmitted">Activity (%1$.2f points) successfully submitted!</string>
    <string name="chooseChallenge">"Please choose a challenge"</string>
</resources>