<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_main_activity_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_activity_topic"
        android:textSize="@dimen/main_activity_topic_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/spinner_challenges"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/main_activity_parts_margin"
        android:layout_marginEnd="32dp"
        android:textSize="@dimen/main_activity_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_challenge_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_activity_topic" />


    <TextView
        android:id="@+id/tv_challenge_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/main_activity_parts_margin"
        android:layout_marginEnd="16dp"
        android:text="@string/challenge"
        android:textSize="@dimen/main_activity_text_size"
        app:layout_constraintEnd_toStartOf="@+id/spinner_challenges"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_activity_topic" />

    <TextView
        android:id="@+id/tv_user_points_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/main_activity_parts_margin"
        android:layout_marginEnd="16dp"
        android:text="@string/your_points"
        android:textSize="@dimen/main_activity_text_size"
        app:layout_constraintEnd_toStartOf="@+id/tv_user_points_value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_challenges" />

    <TextView
        android:id="@+id/tv_user_points_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/main_activity_parts_margin"
        android:layout_marginEnd="32dp"
        android:textSize="@dimen/main_activity_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_user_points_text"
        app:layout_constraintTop_toBottomOf="@+id/spinner_challenges" />



    <TextView
        android:id="@+id/tv_goal_points_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/goal_points"
        android:textSize="@dimen/main_activity_text_size"
        app:layout_constraintEnd_toStartOf="@+id/tv_goal_points_value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_points_value" />

    <TextView
        android:id="@+id/tv_goal_points_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:textSize="@dimen/main_activity_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_goal_points_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_points_value" />


    <TextView
        android:id="@+id/tv_leading_point_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/leading_points"
        android:textSize="@dimen/main_activity_text_size"
        app:layout_constraintEnd_toStartOf="@+id/tv_leading_point_value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_goal_points_value" />

    <TextView
        android:id="@+id/tv_leading_point_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:textSize="@dimen/main_activity_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_leading_point_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_goal_points_value" />


    <TextView
        android:id="@+id/tv_deadline_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/deadline"
        android:textSize="@dimen/main_activity_text_size"
        app:layout_constraintEnd_toStartOf="@+id/tv_deadline_value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_leading_point_value" />

    <TextView
        android:id="@+id/tv_deadline_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:textSize="@dimen/main_activity_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_deadline_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_leading_point_value" />

    <Button
        android:id="@+id/btn_create_new_challenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/create_new_challenge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_deadline_text" />

    <Button
        android:id="@+id/btn_start_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/start_new_avtivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>