<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/maps_activity_margin"
    android:orientation="vertical"
    tools:context=".MapsActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapsFragment"
        android:name="com.example.challengetracker.MapsFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:tag="fragment_tag"
        tools:layout="@layout/fragment_maps" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/maps_activity_margin"
        android:layout_weight="2"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/maps_activity_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="@dimen/maps_activity_label_size" />

            <Chronometer
                android:id="@+id/c_meter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/maps_activity_value_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/maps_activity_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_dist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textSize="@dimen/maps_activity_label_size" />

            <TextView
                android:id="@+id/text_dist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/maps_activity_value_size" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/text_challenge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/maps_activity_value_size" />

    <Spinner
        android:id="@+id/spinner_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:popupElevation="@dimen/maps_activity_label_size"/>

    <Button
        android:id="@+id/btn_startStop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/start"
        android:textSize="18sp" />

</LinearLayout>